<resources>
    <!-- app wide strings -->
    <string name="pneuvida_logo">pneuvida logo</string>
    <string name="app_name">PneuVida</string>

    <!-- home strings -->
    <string name="vitals_display_button">Vitals Display</string>
    <string name="patient_profiles_button">Patient Profiles</string>
    <string name="settings_button">Settings</string>
    <string name="help_info_button">Help/About</string>

    <!-- patient profile strings -->
    <string name="height_text">Height</string>
    <string name="name">Last Name, First Name</string>
    <string name="dob_text">D.O.B.</string>
    <string name="notes_text">Notes</string>
    <string name="sex_text">Sex</string>
    <string name="weight_text">Weight</string>
    <string name="allergies_text">Allergies</string>
    <string name="medications_text">Medications</string>

    <!-- patient profile menu strings -->
    <string name="add_profile_button">Add Profile</string>
    <string name="delete_profile_button">Delete Profiles</string>
    <string name="profile1">Profile 1</string>
    <string name="profile2">Profile 2</string>
    <string name="profile3">Profile 3</string>
    <string name="profile4">Profile 4</string>
    <string name="profile5">Profile 5</string>
    <string name="profile6">Profile 6</string>

    <!-- edit profile strings -->
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="name_hint">Name</string>
    <string name="dob_hint">mm/dd/yyyy</string>
    <string name="meds_hint">patient\'s medications</string>
    <string name="allergies_hint">patient\'s allergies</string>
    <string name="notes_hint">Any other notes about patients go here</string>

    <!-- vitals strings -->
    <string name="respiratory_rate_button">"Respiratory Rate""\n""0 bpm"</string>
    <string name="oxygen_saturation_button">"Oxygen Saturation""\n"0%"</string>
    <string name="heart_rate_button">"Heart Rate""\n""0 bpm"</string>
    <string name="temperature_button">"Temperature""\n""0.0 F"</string>
    <string name="overall_distress_text">"Overall\ndistress:"</string>
    <string name="distress_value">"0.00"</string>
    <string name="start_record_button">"Start Recording"</string>
    <string name="stop_record_button">"Stop Recording"</string>

    <!-- help/about strings -->
    <string name="title_activity_help_about">helpAbout</string>
    <string name="help_text">" Info on how to use the app
        a
        b
        c
        d
        e
        f
        g
        h
        i
        j
        k
        l
        m
        n
        o
        p
        q
        r
        s
        t
        u
        v
        w
        x
        y
        z"</string>
    <string name="about_text"> "About the app\n\n"
        "    PneuVida is a wearable glove device that measures respiratory rate, SpO2 levels, heart rate, and temperature."
        " The goal of the device is to accurately and reliably measure the aforementioned vitals, and allow for their quantification in order to yield the overall level of respiratory distress an individual is experiencing."
        " PneuVida has the ability to assist in the monitoring of respiratory distress and pneumonia in both a clinical and non-clinical setting due to a user-friendly interface."
        " The PneuVida team sees great prospect for the device, with applications in not only respiratory distress, but other ailments and general vital monitoring itself using an altered algorithm and vital importance weighting system."

        </string>
    <string name="legal_text">" Legal information
        a
        b
        c
        d
        e
        f
        g
        h
        i
        j
        k
        l
        m
        n
        o
        p
        q
        r
        s
        t
        u
        v
        w
        x
        y
        z"</string>

    <!-- settings strings -->
    <string name="delete_all_profiles_text">Delete all profiles</string>
    <string name="light_dark_theme_text">Light/Dark theme</string>
    <string name="delete_button_text">delete</string>

    <!--bluetooth activity strings-->
    <string name="bt_title_text">Select Bluetooth Device</string>

    <!--vitals graph strings-->
    <string name="vital_title">Vital</string>

    <!-- confirm strings -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel_without_saving">Cancel without saving?</string>
    <string name="save_confirm">Save recorded data?</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>

    <!--vitals data strings -->
    <string name="respiratory_rate">"Respiratory\nRate"</string>
    <string name="oxygen_saturation">Oxygen\nSaturation</string>
    <string name="temperature">Temperature</string>
    <string name="heart_rate">Heart Rate</string>

</resources>
