<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christopher.pneuvida.Vitals">

    <Spinner
        android:id="@+id/patient_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vitals_logo" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_record_button"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/rr_button"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/severeDistress"
            android:text="@string/respiratory_rate_button"
            android:textAlignment="center" />

        <Button
            android:id="@+id/os_button"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/mildDistress"
            android:text="@string/oxygen_saturation_button" />

        <Button
            android:id="@+id/hr_button"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/mildDistress"
            android:text="@string/heart_rate_button" />

        <Button
            android:id="@+id/temperature_button"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/noDistress"
            android:text="@string/temperature_button" />

    </GridLayout>

    <ImageView
        android:id="@+id/vitals_logo"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/pneuvida_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        app:layout_constraintHorizontal_bias="0.5" />

</android.support.constraint.ConstraintLayout>
