<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.christopher.pneuvida.PatientProfileMenu">

    <ImageView
        android:id="@+id/profile_menu_logo"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/pneuvida_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/add_profile_button"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:drawableStart="@android:drawable/ic_input_add"
        android:text="@string/add_profile_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_profile_button"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="68dp"
        android:drawableStart="@android:drawable/ic_delete"
        android:text="@string/delete_profile_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/profile_1"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/profile_2"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/profile_3"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/profile_4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/profile4" />

            <Button
                android:id="@+id/profile_5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/profile5" />

            <Button
                android:id="@+id/profile_6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/profile6" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
